[cairo] BackingStore::incorporateUpdate should use CompositeCopy to support drawsBackground=false in general Cairo ports https://bugs.webkit.org/show_bug.cgi?id=191577

Patch by Tomoki Imai <Tomoki.Imai@sony.com> on 2018-11-19
Reviewed by Carlos Garcia Campos.

We should use CompositeCopy operator to update bitmap to overwrite existing bitmap even if source contains
transparent parts. It enables ports which uses Cairo to set drawsBackground to false.
GTK ports has custom background extension, and in such case, we need to use CompositeSourceOver to retain
custom background.

* UIProcess/cairo/BackingStoreCairo.cpp:
(WebKit::BackingStore::incorporateUpdate): Use CompositeCopy operator to update bitmap.

Canonical link: https://commits.webkit.org/206555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238379 268f45cc-cd09-0410-ab3c-d52691b4dbfc